# hawaii-terminal

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  LICENSE  LICENSE.yat  README.md
.tx/: config
data/: CMakeLists.txt  hawaii-terminal.appdata.xml  hawaii-terminal.desktop  hawaii-terminal.desktop.in  hawaii-terminal_fr.desktop  hawaii-terminal_hu.desktop  hawaii-terminal_it.desktop  hawaii-terminal_no.desktop  hawaii-terminal_pt_BR.desktop  hawaii-terminal_sk.desktop  hawaii-terminal_vi.desktop  org.hawaiios.terminal.appdata.xml  org.hawaiios.terminal.desktop  org.hawaiios.terminal.desktop.in  update  update.sh
data/translations/: hawaii-terminal_ar.desktop  hawaii-terminal_de.desktop  hawaii-terminal_el.desktop  hawaii-terminal_it.desktop  hawaii-terminal_pl.desktop  hawaii-terminal_ru.desktop  hawaii-terminal_tr.desktop
plugin/: CMakeLists.txt
plugin/konsole/: CMakeLists.txt  TerminalDisplay.cpp
plugin/pamauthentication/: CMakeLists.txt  pamauthentication.cpp  pamauthentication.h  pamauthentication_plugin.cpp  qmldir
plugin/qmltermwidget/: .gitignore  CMakeLists.txt
plugin/qmltermwidget/lib/: TerminalDisplay.cpp  TerminalDisplay.h
plugin/qmltermwidget/lib/color-schemes/: Ubuntu.colorscheme
plugin/qmltermwidget/src/: QMLTermScrollbar.qml  qmldir  qmltermwidget_plugin.cpp
plugin/qmltermwidget/test-app/: test-app.qml
src/: CMakeLists.txt  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  terminal.desktop  terminal.qrc  windowcontroller.cpp  windowcontroller.h
src/lib/: BlockArray.cpp  ColorScheme.cpp  Emulation.cpp  Filter.cpp  Filter.h  History.cpp  KeyboardTranslator.cpp  Pty.cpp  Screen.cpp  ScreenWindow.cpp  Session.cpp  ShellCommand.cpp  TerminalCharacterDecoder.cpp  TerminalDisplay.cpp  TerminalDisplay.h  Vt102Emulation.cpp  blockarray.cpp  blockarray.h  character.h  charactercolor.h  colortables.h  emulation.cpp  emulation.h  filter.cpp  filter.h  history.cpp  history.h  k3process.cpp  k3process.h  k3processcontroller.cpp  k3processcontroller.h  keyboardtranslator.cpp  keyboardtranslator.h  konsole_wcwidth.cpp  konsole_wcwidth.h  kprocess.cpp  kpty.cpp  kpty.h  kpty_p.h  kptydevice.cpp  (+24 more)
src/lib/kb-layouts/: default.keytab  linux.keytab  macbook.keytab  solaris.keytab  vt420pc.keytab
src/qml/: ContextMenu.qml  MainWindow.qml  ProfileDialog.qml  RenameDialog.qml  ShortcutsHandler.qml  TerminalComponent.qml  TerminalHolder.qml  TerminalInputArea.qml  TerminalLayout.qml  TerminalScreen.qml  TerminalSettings.qml  TerminalView.qml  main.qml  qml.qrc
src/qml/profile/: General.qml  Scrolling.qml
src/translations/: it.ts  template.ts
translations/terminal/: terminal.desktop  terminal.ts  terminal_ar.desktop  terminal_ar.ts  terminal_ast.desktop  terminal_ast.ts  terminal_bg.desktop  terminal_bg.ts  terminal_ca.desktop  terminal_ca.ts  terminal_cs_CZ.desktop  terminal_cs_CZ.ts  terminal_da_DK.desktop  terminal_da_DK.ts  terminal_de.desktop  terminal_de.ts  terminal_el.desktop  terminal_el.ts  terminal_es.desktop  terminal_es.ts  terminal_fr.desktop  terminal_fr.ts  terminal_hr_HR.desktop  terminal_hr_HR.ts  terminal_hu.desktop  terminal_hu.ts  terminal_it.desktop  terminal_it.ts  terminal_ja_JP.desktop  terminal_ja_JP.ts  terminal_kk.desktop  terminal_kk.ts  terminal_lt.desktop  terminal_lt.ts  terminal_no.desktop  terminal_no.ts  terminal_pl.desktop  terminal_pl.ts  terminal_pt_BR.desktop  terminal_pt_BR.ts  (+8 more)
